<resources>
    <string name="app_name">拍呗</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn">登录</string>
    <string name="login_name">手机号</string>
    <string name="login_pwd">密码</string>
    <string name="register_hint"><![CDATA[立即注册 >]]></string>
    <string name="reg_tel">请输入手机号</string>
    <string name="reg_validate">获取验证码</string>
    <string name="write_reg_validate">验证码</string>
    <string name="next_reg">下一步</string>
    <string name="register">注册</string>
    <string name="title_activity_slape">SlapeActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_regsiter">RegsiterActivity</string>
    <string name="title_activity_dongtai">DongtaiActivity</string>
    <string name="title_activity_me">MeActivity</string>
    <string name="about_intro">你好,中国</string>
    <string name="error">网络出错</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_at">刷新成功</string>
    <string name="title_activity_view_item">ViewItemActivity</string>
    <string name="title_activity_send">SendActivity</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="title_activity_ji_fen_list">JiFenListActivity</string>
    <string name="forget_password_hint">忘记密码？</string>
    <string name="title_activity_assess">AssessActivity</string>
    <string name="clazz">分类</string>
    <string name="button_assess">确认评价</string>
    <string name="text_star_num">您的评价是:</string>
    <string name="text_reputation">好评率:</string>

    <!-- 下拉列表内容 -->
   <string-array name="spingarr">
     <item>酒店</item>
    <item>医院</item>
    <item>周边*旅游</item>
    </string-array>
    <string name="title_activity_capture">CaptureActivity</string>
    <string name="capture_tip">请将二维码置于取景框内扫描</string>
    <string name="title_activity_web">WebActivity</string>

</resources>
