<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:flatui="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/abc_action_bar_progress_bar_size"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <com.cengalabs.flatui.views.FlatEditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="11"
            android:textColor="@color/dark_darker"
            android:hint="@string/login_name"
            android:inputType="phone"
            android:includeFontPadding="true"
            flatui:fl_fieldStyle="fl_box"
            flatui:fl_theme="@array/grass" />

        <com.cengalabs.flatui.views.FlatEditText
            android:id="@+id/login_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="36"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:textColor="@color/dark_darker"
            android:hint="@string/login_pwd"
            android:inputType="textPassword"
            android:includeFontPadding="true"
            flatui:fl_fieldStyle="fl_box"
            flatui:fl_theme="@array/grass" />


        <com.cengalabs.flatui.views.FlatButton
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            flatui:fl_theme="@array/grass"
            android:textSize="20sp"
            android:text="@string/btn" />
        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:textColor="@color/sea_primary"
            android:text="@string/register_hint"/>
    </LinearLayout>


</LinearLayout>
