<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:flatui="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/abc_action_bar_progress_bar_size"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+86"
                android:textSize="16dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/grass_light" />

            <com.cengalabs.flatui.views.FlatEditText
                android:id="@+id/reg_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:maxLength="11"
                android:textColor="@color/dark_darker"
                android:hint="@string/reg_tel"
                android:inputType="phone"
                android:includeFontPadding="true"
                flatui:fl_fieldStyle="fl_box"
                flatui:fl_theme="@array/grass" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <com.cengalabs.flatui.views.FlatEditText
                android:id="@+id/reg_validate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:maxLength="6"
                android:gravity="center_vertical"
                android:textColor="@color/dark_darker"
                android:hint="@string/write_reg_validate"
                android:inputType="number"
                android:layout_marginRight="@dimen/abc_action_bar_default_height_material"
                android:includeFontPadding="true"
                flatui:fl_fieldStyle="fl_box"
                flatui:fl_theme="@array/grass" />
            <com.cengalabs.flatui.views.FlatButton
                android:id="@+id/send_reg_validate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                flatui:fl_theme="@array/grass"
                android:textSize="16sp"
                android:text="@string/reg_validate" />

        </LinearLayout>
            <com.cengalabs.flatui.views.FlatButton
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                flatui:fl_theme="@array/grass"
                android:textSize="20sp"
                android:text="@string/next_reg" />


    </LinearLayout>


</LinearLayout>
